tests/baselines/reference/importEqualsDeclarationError.errors.txt
/c.ts(1,1): error TS1370: Only ES2015 imports may use 'import type'.


==== /c.ts (1 errors) ====
    import type T = require('./a'); // Error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1370: Only ES2015 imports may use 'import type'.
    import type = require('./b');   // Ok
    
==== /a.ts (0 errors) ====
    type T = {};
    export = T;
    
==== /b.ts (0 errors) ====
    class SomeClass {}
    export = SomeClass;
    